# genomespeak

./: .gitignore  CLAUDE.md  Dockerfile  README.md  agent.py  classifier.py  cloudbuild.yaml  index.html  main.py  models.py  pyproject.toml  registry.py  selector.py  session_handover.md  setup_rag_corpus.py  test_selector.py
api/: main.py
frontend/: index.html
genomespeak/: __init__.py  agent.py
genomespeak/harness/: classifier.py  registry.py
genomespeak/tools/: mcp_registry.py  pdf_ingest.py
scripts/: gcp_setup.sh  setup_rag_corpus.py
tests/: test_selector.py
