[project]
name = "genomespeak"
version = "1.0.0"
description = "AI agent that explains complex lab and genomics reports in plain language"
requires-python = ">=3.11"

dependencies = [
    "google-adk>=1.0.0",
    "google-cloud-aiplatform>=1.75.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-firestore>=2.19.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
